Fix annoying outline on Firefox

--- a/family-site/css/styles.css
+++ b/family-site/css/styles.css
@@ -11,9 +11,8 @@ body {
 	font-family: "Open Sans", sans-serif;
 	font-weight: lighter;
 }
-a {
-	color: #f1a;
-}
+a { color: #f1a; }
+a:focus { outline: none; }
 
 /* Main text content goes here. */
 #main-cont {
